[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ios-simulator-mcp"
version = "0.1.0"
description = "MCP server for controlling the iOS Simulator — screenshots, taps, swipes, logs, and more"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "adborroto" }]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "python-dotenv>=1.0",
]
keywords = ["mcp", "ios", "simulator", "xcrun", "simctl", "claude", "cursor", "xcode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
ios-simulator-mcp = "ios_simulator_mcp:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0",
    "build>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/adborroto/ios-simulator-mcp"
Repository = "https://github.com/adborroto/ios-simulator-mcp"
Issues = "https://github.com/adborroto/ios-simulator-mcp/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
